<resources>
    <string name="app_name">ProfileApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kelas">class</string>
    <string name="username">username</string>
    <string name="nim">nim</string>
    <string name="deskripsi">deskripsi</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi eum hic modi ratione tempora vel vitae. Eaque earum eligendi enim, error, ex excepturi, neque nobis obcaecati sed sit vitae voluptas!</string>
    <string name="profile">Menyimpan profil anda dengan tampilan yang menarik</string>
    <string name="contact">Kontak anda kami simpan dengan rapi</string>
    <string name="list_friends">Hubungi dan ingat selalu kontak teman dan kerabat dekat anda</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="retype_password">retype password</string>
    <string name="phone_number">phone number</string>
    <string name="email">email</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="sign_up">Sign Up</string>


    <string name="nim_error">nim required</string>
    <string name="username_error">username required</string>
    <string name="class_error">class required</string>
    <string name="telephone_error">telephone required</string>
    <string name="email_error">email required</string>
    <string name="twitter_error">twitter required</string>
    <string name="instagram_error">instagram required</string>
    <string name="facebook_error">facebook required</string>
    <string name="password_error">password required</string>
    <string name="retype_password_error">password not match</string>
    <string name="description_error">description required</string>
    <string name="email_not_valid">This field has to be a valid email address</string>
    <string name="account_already_exist">Account already exist</string>
    <string name="update">Update</string>

    <string name="input_nim">Input your nim here</string>
    <string name="input_name">Input your name here</string>
    <string name="input_class">Input your class here</string>
    <string name="input_email">Input your email here</string>
    <string name="input_telepon">Input your telepon here</string>
    <string name="input_twitter">Input your twitter here</string>
    <string name="input_instagram">Input your instagram here</string>
    <string name="input_facebook">Input your facebook here</string>
    <string name="description">description</string>
    <string name="update_bottom_sheet_label">Update %s</string>


</resources>
